--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
+    margin: 0;
+    padding: 0;
 
+    font-family: "Cuprum", Arial, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: normal;
+    color: #000000;
+
+    background-color: #ffffff;
 }
