--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,87 @@ a {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
+header {
+    background-color: #f4f7f9;
+}
+
+.index-page-h1 {
+    width: 196px;
+    height: 60px;
+    font-size: 16px;
+    font-weight: normal;
+    font-style: italic;
+    font-stretch: normal;
+    line-height: 1.44;
+    letter-spacing: normal;
+    text-align: left;
+    color: #ee3643;
+}
+
+.top-section {
+    color: #ffffff;
+    background-color: #293449;
+    font-size: 17px;
+}
+
+.top-section a {
+    color: #ffffff;
+}
+
+.address-top {
+    width: 250px;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.71;
+    letter-spacing: normal;
+    text-align: center;
+    color: #32425c;
+}
+
+.address-top .phone {
+    width: 144px;
+    height: 21px;
+    font-size: 21px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-align: left;
+    color: #ee3643;
+}
+
+.user-menu li {
+    list-style-type: none;
+}
+
+.user-menu a {
+    font-size: 21px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-align: left;
+    color: #000000;
+    list-style-type: none;
+}
+
+.main-menu {
+    color: #ffffff;
+    background-color: #293449;
+    font-size: 17px;
+}
+
+.main-menu li {
+    list-style-type: none;
+}
+
+.main-menu a {
+    color: #ffffff;
+    background-color: #293449;
+    font-size: 17px;
+}
