--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,27 @@ header {
 /* ----- Сеточные стили ----- */
 
 .main-header {
-    
+    margin-bottom: 23px;
+    height: 320px;
 }
 
+.top-section {
+    padding: 0;
+    height: 42px;
+}
+
+.top-section .logo {
+    display: block;
+    height: 42px;
+    width: 220px;
+    margin-left: 130px;
+    text-align: center;
+    background-color: red;
+    padding-top: 5px;
+    box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
+}
+
+
+.top-section form {
+
+}
